feat save screenshot (#37)
* add save screenshot

* implement save and load

--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -370,7 +370,7 @@ resources:
                           - id: "1-${item.id}"
                             $when: "item.hasData"
                             type: sprite
-                            url: file:lakjf3lka
+                            url: "saveImage:${item.id}"
                             x: 0
                             y: 0
                             width: 400
@@ -384,6 +384,7 @@ resources:
                             $when: "!item.hasData"
                             type: sprite
                             url: file:lakjf3lka
+                            hoverUrl: file:dmni32
                             x: 0
                             y: 0
                             width: 400
@@ -506,9 +507,11 @@ resources:
                         width: 400
                         height: 300
                         children:
-                          - id: "1"
+                          - id: "ef31-${item.id}-${item.hasData}"
+                            $when: "item.hasData"
                             type: sprite
-                            url: file:lakjf3lka
+                            url: "saveImage:${item.id}"
+                            hoverUrl: file:dmni32
                             x: 0
                             y: 0
                             width: 400
@@ -518,7 +521,20 @@ resources:
                               actions:
                                 saveVnData:
                                   slotIndex: ${item.id}
-                          - id: "3fadj"
+                          - id: "afe1jjef31-${item.id}-${item.hasData}"
+                            $when: "!item.hasData"
+                            type: sprite
+                            url: "file:lakjf3lka"
+                            x: 0
+                            y: 0
+                            width: 400
+                            height: 300
+                            eventName: "system"
+                            eventPayload:
+                              actions:
+                                saveVnData:
+                                  slotIndex: ${item.id}
+                          - id: "3fadj-${item.id}"
                             type: text
                             x: 20
                             y: 20
@@ -927,7 +943,7 @@ resources:
       elements:
         - id: bg
           type: sprite
-          url: file:lakjf3lka
+          url: file:dmni32
           x: 0
           y: 0
           rightClickEventName: "system"
@@ -1074,6 +1090,10 @@ resources:
   images:
     alkejf3la:
       fileId: 94lkj289
+    f3wklajf32:
+      fileId: dmni32
+    32rka331:
+      fileId: 23jkfa893
 
   transforms:
     iasdlf:
@@ -1102,8 +1122,8 @@ resources:
               value: 0
               easing: linear
 story:
-  initialSceneId: ajfl3a
-  # initialSceneId: 93jkal3
+  # initialSceneId: ajfl3a
+  initialSceneId: 93jkal3
   # initialSceneId: 39kd932
   scenes:
     ajfl3a:
@@ -1158,6 +1178,9 @@ story:
                 screen:
                   resourceId: storyScreenLayout
                   resourceType: layout
+                background:
+                  resourceId: f3wklajf32
+                  resourceType: image
                 dialogue:
                   layoutId: fi3l
                   content: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
